--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <input type="text" id="inputTitulo">
     </div>
     <div id="ejes" class="ejes">
-        <input type="range">
-        <input type="range">
+        <input type="range" id="ejey" min="-50" max="50">
+        <input type="range" id="ejex" min="-50" max="50">
     </div>
     <div id="color" class="color">
         <input type="radio" id="black" name="radio" value="black" checked>Black<br>
