--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <div id="titulo" class="titulo">
-        <label id="title"> Titulo: </label>
+        <label id="title"><strong> Titulo </strong></label>
         <input type="text" id="inputTitulo">
     </div>
     <div id="ejes" class="ejes">
-        <input type="range" id="ejey" min="-50" max="50">
-        <input type="range" id="ejex" min="-50" max="50">
+        <input type="range" id="ejey" min="-50" max="50"> Eje Y
+        <input type="range" id="ejex" min="-50" max="50"> Eje X
     </div>
     <div id="color" class="color">
-        <input type="radio" id="black" name="radio" value="black" checked>Black<br>
+        <input type="radio" id="black" name="radio" value="black" checked>Black
         <input type="radio" id="white" name="radio" value="white">White
     </div>
     <div id="imagenes" class="imagenes">
